# vjepa-training

./: .gitignore  Makefile  README.md  pyproject.toml
src/: download_data.py  train.py  utils.py
