[project]
name = "vjepa-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "huggingface-hub>=0.33.0",
    "torch>=2.7.1",
    "torchcodec>=0.4.0",
    "torchvision>=0.22.1",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "wandb>=0.20.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ffmpeg<8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
